@@ -20,23 +20,25 @@ import static org.apache.commons.lang3.ArrayUtils.toPrimitive;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
+import java.util.Deque;
+import java.util.LinkedList;
 import java.util.List;
 
 public class DataPumpSendBuffer {
 	private int maxBufferSize = 0;
 	private ByteBuffer sendBuffer;
 	private int currentCacheBufferSize = 0;
-	private List<List<Byte>> sendCacheBuffer = new ArrayList<>();
-	
+	private Deque<List<Byte>> sendCacheBuffer = new LinkedList<>();
+
 	public DataPumpSendBuffer(int maxBufferSize) {
 		this.maxBufferSize = maxBufferSize;
 	}
-	
-	public ByteBuffer getSendBuffer() {
+
+	public synchronized ByteBuffer getSendBuffer() {
 		if (sendBuffer != null && sendBuffer.remaining() > 0) {
 			return sendBuffer;
 		} else if ((sendBuffer == null || sendBuffer.remaining() == 0) && sendCacheBuffer.size() > 0) {
-			List<Byte> newData = sendCacheBuffer.remove(0);
+			List<Byte> newData = sendCacheBuffer.removeFirst();
 			sendBuffer = ByteBuffer.wrap(toPrimitive(newData.toArray(new Byte[0])));
 			currentCacheBufferSize -= newData.size();
 			return sendBuffer;
@@ -44,19 +46,21 @@ public class DataPumpSendBuffer {
 			return ByteBuffer.allocate(0);
 		}
 	}
-	
-	public void addData(List<Byte> data) {
+
+	public synchronized void addData(List<Byte> data) {
 		int freeSpace = maxBufferSize;
 		if (sendBuffer != null) {
 			freeSpace -= sendBuffer.remaining();
 		}
 		freeSpace -= currentCacheBufferSize;
-		
+
 		if (data.size() <= freeSpace) {
 			sendCacheBuffer.add(new ArrayList<>(data));
 			currentCacheBufferSize += data.size();
 		} else {
-			throw new RuntimeException(format("Not enough free space in buffer.  Buffer Size: %s, Free Space: %s, Data Size %s.", maxBufferSize, freeSpace, data.size()));
+			throw new RuntimeException(
+					format("Not enough free space in buffer.  Buffer Size: %s, Free Space: %s, Data Size %s.",
+							maxBufferSize, freeSpace, data.size()));
 		}
 	}
 }
